--- a/home.html
+++ b/home.html
@@ -4,78 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio.COM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-      <ul>
-        
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact.html">contact</a></li>
-      
+    <ul class="unorder">
+      <li class="list"><a href="home.html">Home</a></li>
+      <li class="list"><a href="about.html">About</a></li>
+      <li class="list"><a href="work.html">Work</a></li>
+      <li class="list"><a href="resume.html">Resume</a></li>
+      <li class="list"><a href="contact.html">contact</a></li>
     </ul>
-    <div class="Topnav"></div>
-    <h1>My name is Izuoba Sunday</h1>
-    <figure>
-    <img src="./video and audio/20240702_170936 (1).jpg" alt="Italian Trulli" width="400" height="400" />
-    <figcaption>
-      Sunday Izuoba
-    </figcaption>
-    </figure>
-    <article>
-    <p>I'm sunday an IT Support Professional and web developer and i love coding and IT in general with passion </p>
-    </article>
+    <div class="div-name">
+      <h1 class="h-name">My name is Izuoba Sunday</h1>
     </div>
-    <form action="">
-    <section>
-      <h1>Work</h1>
-      <article>
+    <div class="pics">
+      <img
+        src="./video and audio/vecteezy_color-blob-banner_21971663.png"
+        class="shape"
+      />
+      <img src="./video and audio/2024071519403177.png" class="man" />
+    </div>
+    <div class="div-arti">
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-        dolore itaque sed molestias obcaecati vero nobis, minus expedita totam
-        est ad eaque corporis culpa deserunt consequatur architecto, doloribus
-        eum quisquam!
+        I'm Sunday Izuoba a <span class="web"> Web Developer </span>and an IT
+        Support Professional and i love to building and design web applications
       </p>
-     </article>
-    </section>
-    <section>
-      <h1>Resume</h1>
-     <article>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-        dolore itaque sed molestias obcaecati vero nobis, minus expedita totam
-        est ad eaque corporis culpa deserunt consequatur architecto, doloribus
-        eum quisquam!
-      </p>
-    </article>
-      <section>
-        <h1>Contact</h1>
-        <article>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-          dolore itaque sed molestias obcaecati vero nobis, minus expedita totam
-          est ad eaque corporis culpa deserunt consequatur architecto, doloribus
-          eum quisquam!
-        </p>
-      </article>
-      </section>
-      <section>
-        <h1>About</h1>
-        <article>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-          dolore itaque sed molestias obcaecati vero nobis, minus expedita totam
-          est ad eaque corporis culpa deserunt consequatur architecto, doloribus
-          eum quisquam!
-        </p>
-      </article>
-      </section>
-    </form>
-    <footer>
-      <a href="home.html">Back to Top</a>
-    <hr>
-    copyright &copy; <a href="about.html">Sunday Izuoba</a>  <a href="contact.Html">Contact us</a>  <a href="work.html">Our Work</a> 
+    </div>
+    <br />
+    <footer class="foo22">
+      copyright &copy; <a href="about.html">Sunday Izuoba</a>
+      <a href="contact.Html">Contact us</a> <a href="work.html">Our Work</a>
     </footer>
   </body>
 </html>
