--- a/work.html
+++ b/work.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact.html">contact</a></li>
+    <section>
+      <ul class="unorder">
+        <li class="list"><a href="home.html">Home</a></li>
+        <li class="list"><a href="about.html">About</a></li>
+        <li class="list"><a href="work.html">Work</a></li>
+        <li class="list"><a href="resume.html">Resume</a></li>
+        <li class="list"><a href="contact.html">contact</a></li>
       </ul>
-    </div>
+    </section>
     <div>
-      <section>
+      <section class="sect2">
         <h2>My Projects</h2>
         <ul>
           <li>i built a website using Python and Django</li>
           <li>
             I am currently building a Portofolio website using javascript
-            Node.js,React and typscrit
+            Node.js,React and typescript
           </li>
         </ul>
       </section>
-      <section>
-        <table border="1">
+      <section class="sect3">
+        <table border="1" class="table1">
           <tr>
             <th>p-language</th>
             <th>Experience</th>
@@ -44,23 +45,23 @@
             <td>Product Website</td>
           </tr>
         </table>
-        <br />
-        <br />
-        <section>
-          <video width="320" height="240" controls>
-            <source
-              src="/CLASS-SESSIONS/HTML_INTRO/image/video.mp4"
-              type="video/mp4"
-            />
-          </video>
-          <br />
-          <br />
-          <audio controls>
-            <source src="video and audio/valerie.MP3" type="audio/mpeg" />
-          </audio>
-        </section>
       </section>
-      <section>
+      <br />
+      <br />
+      <section class="sect4">
+        <video width="320" height="240" controls>
+          <source
+            src="/CLASS-SESSIONS/HTML_INTRO/image/video.mp4"
+            type="video/mp4"
+          />
+        </video>
+        <br />
+        <br />
+        <audio controls>
+          <source src="video and audio/valerie.MP3" type="audio/mpeg" />
+        </audio>
+      </section>
+      <section class="sect5">
         <h3>Certifications</h3>
         <ul>
           <li>Technical Support Fundermentals</li>
@@ -72,16 +73,11 @@
         </ul>
       </section>
       <section>
-        <h4>Experience</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-          cupiditate explicabo! Corporis delectus quo, oe
-        </p>
+        <footer class="foo22">
+          copyright &copy; <a href="about.html">Sunday Izuoba</a>
+          <a href="contact.Html">Contact us</a> <a href="work.html">Our Work</a>
+        </footer>
       </section>
     </div>
-    <a href="home.html">Back to Top</a>
-    <br />
-    copyright &copy; <a href="about.html">Sunday Izuoba</a>  <a href="contact.Html">Contact us</a>  <a href="work.html">Our Work</a> 
-    </footer>
   </body>
 </html>
