--- a/about.html
+++ b/about.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
-      <section>
-        <h1>About</h1>
-        <p>
+    <ul class="unorder">
+      <li class="list"><a href="home.html">Home</a></li>
+      <li class="list"><a href="about.html">About</a></li>
+      <li class="list"><a href="work.html">Work</a></li>
+      <li class="list"><a href="resume.html">Resume</a></li>
+      <li class="list"><a href="contact.html">contact</a></li>
+    </ul>
+    <div class="bo">
+      <section class="sec1">
+        <h1 class="abt1">About</h1>
+        <p class="lor1">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
           dolore itaque sed molestias obcaecati vero nobis, minus expedita totam
           est ad eaque corporis culpa deserunt consequatur architecto, doloribus
           eum quisquam!
         </p>
       </section>
-      <section>
-        <h2>Mission</h2>
-        <p>
+      <section class="sec2">
+        <h2 class="abt22">Mission</h2>
+        <p class="lor2">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur
           cumque unde debitis provident aliquam labore id sunt libero aliquid
           cupiditate.
         </p>
       </section>
-      <section>
-        <h3>Certifications</h3>
+      <section class="sec3">
+        <h3 class="cer">Certifications</h3>
         <ul>
           <li>Technical Support Fundermentals</li>
           <li>Bit And Bit of Computer Networking</li>
@@ -35,16 +43,8 @@
           <li>Play it Safe</li>
         </ul>
       </section>
-      <section>
-        <h4>Experience</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-          cupiditate explicabo! Corporis delectus blanditiis labore quo, odio
-          explicabo maxime natus!
-        </p>
-      </section>
-      <section>
-        <h2>Contact</h2>
+      <section class="sec5">
+        <h2 class="contact222">Contact</h2>
         <p>Reachout to me</p>
         <ul>
           <li>
@@ -61,7 +61,9 @@
         </ul>
       </section>
     </div>
-    <a href="home.html">Back to Top</a>
-    <hr />
+    <footer class="foo22">
+      copyright &copy; <a href="about.html">Sunday Izuoba</a>
+      <a href="contact.Html">Contact us</a> <a href="work.html">Our Work</a>
+    </footer>
   </body>
 </html>
