--- a/contact.Html
+++ b/contact.Html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="contact.html">contact</a></li>
+      <ul class="unorder">
+        <li class="list"><a href="home.html">Home</a></li>
+        <li class="list"><a href="about.html">About</a></li>
+        <li class="list"><a href="work.html">Work</a></li>
+        <li class="list"><a href="resume.html">Resume</a></li>
+        <li class="list"><a href="contact.html">contact</a></li>
       </ul>
     </div>
-    <div>
+    <div class="div-contact">
       <h1>Contact Us</h1>
       <form>
         <label for="name">Name</label>
@@ -43,9 +44,9 @@
       </form>
       <br /><br />
     </div>
-    <a href="home.html">Back to Top</a>
-    <hr />
-    copyright &copy; <a href="about.html">Sunday Izuoba</a>  <a href="contact.Html">Contact us</a>  <a href="work.html">Our Work</a> 
+    <footer class="foo22">
+      copyright &copy; <a href="about.html">Sunday Izuoba</a>
+      <a href="contact.Html">Contact us</a> <a href="work.html">Our Work</a>
     </footer>
   </body>
 </html>
