--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
+    <div class="div01">
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -16,34 +17,22 @@
       </ul>
     </div>
     <div>
-      <header>
+      <header class="hd1">
         <h1>Izuoba Sunday</h1>
       </header>
-      <div>
-        <address>
-        <p>
-          Email:
-          <a href="mailto:sundayizuoba9@gmail.com"
-            >mailto:sundayizuoba9@gmail.com</a
-          >
-        </p>
-        <p>Phone: <a href="tel:+2347065802398">+2347065802398</a></p>
-        <p>Address: Site J Alakija, Lagos, Nigeria</p>
-        </address>
-      </div>
-      <section>
-        <h1>Professional Summary</h1>
+      <section class="seccc1">
+        <h1 class="arttt1">Professional Summary</h1>
         <article>
-        <p>
-          I am a certified IT Support profeesional with good knowledge in
-          networking with practical knowledge using packet tracer,operating
-          system,system adminstration,cyber secyrity,wireshark,tcpdump,python,
-          dJango and am currently learning fully stack Javascript Web
-          Development
-        </p>
-      </article>
+          <p para1>
+            I am a certified IT Support profeesional with good knowledge in
+            networking with practical knowledge using packet tracer,operating
+            system,system adminstration,cyber secyrity,wireshark,tcpdump,python,
+            dJango and am currently learning fully stack Javascript Web
+            Development
+          </p>
+        </article>
       </section>
-      <section>
+      <section class="seccc2">
         <h2>My skills</h2>
         <ul>
           <li>web dedvelopment</li>
@@ -59,8 +48,8 @@
           <li>Basic linux</li>
         </ul>
       </section>
-      <section>
-        <div>
+      <section class="seccc3">
+        <div class="divv1">
           <h3>Work Experience</h3>
           <div>
             <h3>IT Support Tire 1</h3>
@@ -81,7 +70,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="seccc4">
         <h3>Certifications</h3>
         <ul>
           <li>Technical Support Fundermentals</li>
@@ -92,17 +81,6 @@
           <li>Play it Safe</li>
         </ul>
       </section>
-      <section>
-        <h4>Experience</h4>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-          cupiditate explicabo! Corporis delectus quo, oe
-        </p>
-      </section>
     </div>
-    <a href="home.html">Back to Top</a>
-    <hr />
-    copyright &copy; <a href="about.html">Sunday Izuoba</a>  <a href="contact.Html">Contact us</a>  <a href="work.html">Our Work</a> 
-    </footer>
   </body>
 </html>
